@@ -1722,17 +1722,17 @@
   [(set_attr "type" "pop")
    (set_attr "mode" "<MODE>")])
 
-(define_insn "*pushfl<mode>"
-  [(set (match_operand:DWIH 0 "push_operand" "=<")
-	(match_operand:DWIH 1 "flags_reg_operand"))]
+(define_insn "*pushfl<mode>2"
+  [(set (match_operand:W 0 "push_operand" "=<")
+	(match_operand:W 1 "flags_reg_operand"))]
   ""
   "pushf{<imodesuffix>}"
   [(set_attr "type" "push")
    (set_attr "mode" "<MODE>")])
 
-(define_insn "*popfl<mode>"
-  [(set (match_operand:DWIH 0 "flags_reg_operand")
-	(match_operand:DWIH 1 "pop_operand" ">"))]
+(define_insn "*popfl<mode>1"
+  [(set (match_operand:W 0 "flags_reg_operand")
+	(match_operand:W 1 "pop_operand" ">"))]
   ""
   "popf{<imodesuffix>}"
   [(set_attr "type" "pop")
